--- a/bower/leaflet/bower.json
+++ b/bower/leaflet/bower.json
@@ -21,7 +21,8 @@
     "Proj4Leaflet": "proj4leaflet#~0.7.2",
     "proj4": "~2.3.12",
     "jQuery": "~2.2.0",
-    "mapbox-gl-leaflet": "https://github.com/mapbox/mapbox-gl-leaflet.git#~0.0.1"
+    "mapbox-gl-leaflet": "https://github.com/mapbox/mapbox-gl-leaflet.git#~0.0.1",
+    "Leaflet-WFST": "~1.0.0"
   },
   "resolutions": {
     "proj4": "~2.1.2"
